--- a/Login/index.html
+++ b/Login/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/ico" href="../Resources/favicon.ico">
     <link rel="stylesheet" type="text/css" href="../Resources/css/site.css" />
     <link rel="stylesheet" type="text/css" href="../Resources/css/login.css" />
+    <script src="../Resources/js/login_scripts.js"></script>
     <title>Nexus Company</title>
 </head>
 <body>
@@ -23,26 +24,25 @@
                 <b class="singup">Sign Up</b>
             </div>
         </div>
-        <div class="content-right">
-            <div>
+        <div class="content-center">
+            <div class="card">
                 <!-- Header -->
                 <p style="text-align: center;margin-top:10%"><img src="../Resources/img/nexus_crystal.png" width="120px"></p>
-                <p class="index" style="margin-top: 50px;font-size: 25px;margin-bottom: 0px;">Fazer login</p>
-                <p class="index" style="margin-top: 10px;font-size: 17px;">Educação e diversão com a mesma paixão</p>
-
+                <p class="soon-text">Nexus Company</p>
 
                 <!-- Inputs -->
-                <p><input style="margin-top: 10px;" class="form" type="text" placeholder="Write your e-mail" name="user" id="inputUser"></p>
+                <p class="left form login-card-margin-left form-text">User</p>
+                <p><input style="margin-top: 10px;" class="form" type="text" placeholder="Write your e-mail" name="user" id="inputUser"></p>  
+                <p class="left form login-card-margin-left form-error" id="userError"></p>
+                <p class="left form login-card-margin-left form-text">Passsword</p>
                 <input class="form" type="password" placeholder="Write password" name="pwd" style="margin-top:6px" id="inputPassword">
-                <p class="link" style="text-align: right;margin-right: 11%;font-size: 14px;margin-top: 5px;">
-                    Esqueceu a
-                    senha?
-                </p>
+                <p class="left form login-card-margin-left form-error" id="passwordError"></p>
+                <p class="link login-card-margin-right">Forgot Password?</p>
 
                 <!-- Buttons -->
-                <div style="display: inline-block; padding: 5%;">
-                    <label class="link" style="font-size: 17px;padding-right: 5em;">Criar Conta</label>
-                    <button class="normal" type="submit">Entrar</button>
+                <div class="login-buttons">
+                    <label class="link">Sign Up</label>
+                    <button class="normal" type="submit" onclick="OnClickLogin()">Login</button>
                 </div>
 
             </div>
