--- a/Login/index.html
+++ b/Login/index.html
@@ -32,11 +32,11 @@
 
                 <!-- Inputs -->
                 <p class="left form login-card-margin-left form-text">User</p>
-                <p><input style="margin-top: 10px;" class="form" type="text" placeholder="Write your e-mail" name="user" id="inputUser"></p>  
-                <p class="left form login-card-margin-left form-error" id="userError"></p>
+                <p><input class="form" type="text" placeholder="Write your e-mail" name="user" id="inputUser" onfocus="showOrHiddenLoginError(false)"/></p>  
+                <p class="left form login-card-margin-left form-error-invisible" id="userError">Username or e-mail incorrect or invalid!</p>
                 <p class="left form login-card-margin-left form-text">Passsword</p>
-                <input class="form" type="password" placeholder="Write password" name="pwd" style="margin-top:6px" id="inputPassword">
-                <p class="left form login-card-margin-left form-error" id="passwordError"></p>
+                <input class="form" type="password" placeholder="Write password" name="pwd"  id="inputPassword" onfocus="showOrHiddenPasswordError(false)"/>
+                <p class="left form login-card-margin-left form-error-invisible" id="passwordError">Password incorrect or invalid!</p>
                 <p class="link login-card-margin-right">Forgot Password?</p>
 
                 <!-- Buttons -->
