Show or hide password checkbox correction

--- a/Login/index.html
+++ b/Login/index.html
@@ -40,7 +40,7 @@
                 <p class="left form login-card-margin-left form-error-invisible" id="passwordError">Password incorrect or invalid!</p>
                 <p class="left" style="margin-left: 15px;">
                     <input id="c1" type="checkbox" onclick="showOrHidePassword()">
-                    <label for="c1">Show Password</label>
+                    <label for="c1" id="lblCBSPas">Show Password</label>
                 </p>
 
                 <p class="link login-card-margin-right">Forgot Password?</p>
