Start create index page

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,64 @@
-<!DOCTYPE html/>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>Nexus Company</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="Resources\css\index.css" />
+    <link rel="icon" href="favicon.ico" />
 </head>
 <body>
+    <nav>
+        <div class="content">
+            <img class="logo" src="Resources\img\nexus_logo.png" />
+            <ul>
+                <li>
 
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <main>
+        <section class="text">
+            <h1>
+                Are you ready for a new journey?!
+            </h1>
+
+            <div class="setence">
+                <div class="content">
+                    Hey, eae? Are you ready to get started in the Nexus ? Come on, let's go! Create your account or sign in to nexus to use the best!
+                </div>
+            </div>
+        </section>
+        <section class="read-more">
+            <p>Read More</p>
+            <img class="arrow" src="Resources\img\arrow_down.svg" class="arrow" onclick="location.href='#first-feature'"/>
+        </section>
+    </main>
+
+    <section class="content">
+        <h1>
+            Nexus Company
+        </h1>
+        <p>
+            Nexus Company is one Startup created by Juan Douglas (Developer and Software Gestor), focused in developer mentory and softwares assitent
+        </p>
+        <div class="feature" id="first-feature">
+            <div class="right">
+                <h1>
+                    Privacy and Security
+                </h1>
+                <div class="setence">
+                    At Nexus your privacy and security are our main goals, we focus our efforts to make you feel safe in our systems.
+                </div>
+            </div>
+            <div class="left">
+                <img class="icon" src="Resources/img/encrypted.png"/>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+    </footer>
 </body>
 </html>
