Add Site Folder

--- a/Site/index.html
+++ b/Site/index.html
@@ -83,7 +83,6 @@
         </div>
     </section>
 
-
     <footer>
         <section class="singup" id="singup">
             <div class="text">
@@ -91,11 +90,14 @@
                 <p>É sério que você vai perder essas vantagens ?</p>
             </div>
             <div class="buttons">
-                <button type="button" class="negative">
+                <button type="button" 
+                        class="negative"
+                        onclick="window.location.href='https://oauth.nexus-company.tech/Authentication'">
                     Login
                 </button>
-                <button type="button" class="positive"
-                        class="positive" onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
+                <button type="button" 
+                        class="positive"
+                        onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
                     Registre-se
                 </button>
             </div>
