--- a/Site/index.html
+++ b/Site/index.html
@@ -11,19 +11,6 @@
     <nav>
         <div class="content">
             <img class="logo" src="Resources\img\nexus_logo.png" />
-            <ul>
-                <li>
-                    Home
-                </li>
-
-                <li>
-                    OAuth
-                </li>
-
-                <li>
-                    Docs
-                </li>
-            </ul>
         </div>
     </nav>
 
@@ -41,20 +28,56 @@
         </section>
         <section class="read-more">
             <p>Veja mais</p>
-            <img class="arrow" src="Resources\img\arrow_down.svg" class="arrow" onclick="location.href='#singup'" />
+            <img class="arrow" src="Resources\img\arrow_down.svg" onclick="location.href='#saber-mais'" />
         </section>
     </main>
 
-    <section class="body content">
-        <h1>
-            Nexus Company
-        </h1>
-        <p>
-            Nexus Company is one Startup created by Juan Douglas (Developer and Software Gestor), focused in developer mentory and softwares assitent
-        </p>
+    <section class="body">
+        <div class="content-divided">
+            <div class="content left">
+                <h1>Valores e custos</h1>
+                <p>Nosso foco é sempre entregar o <span> melhor </span> resultado com o <span> menor </span> custo possível para todos os nossos parceiros.</p>
+                <button type="button" class="positive" onclick="window.location.href='https://wa.me/5561992503344'">
+                    Saiba mais
+                </button>
+            </div>
+            <div class="content right">
+                <img src="Resources\img\preco-baixo.png" width="120rem" />
+            </div>
+        </div>
+        <div class="content-divided">
+            <div class="content left">
+                <img src="Resources\img\nexus_logo.png" width="250rem" />
+            </div>
+            <div class="content right">
+                <h1>Start up</h1>
+                <p>Somos novos na área empresarial, porém temos total <span>experiência</span> e conhecimento na área de desenvolvimento.</p>
+                <button type="button" class="negative" onclick="window.location.href='https://wa.me/5561992503344'">
+                    Saiba mais
+                </button>
+            </div>
+        </div>
+        <div class="content-divided">
+            <div class="content left">
+                <h1>Entrar em contato</h1>
+                <p>Precisa de ajuda para <span> elaborar </span> ou <span> construir </span> seu projeto de software ? Entre em contato conosco que iremos lhe ajudar durante todo o processo.</p>
+                <button type="button" class="positive" onclick="window.location.href='https://wa.me/5561992503344'">
+                    Saiba mais
+                </button>
+            </div>
+            <div class="content right">
+                <img src="Resources\img\whatsapp-business.svg" width="300rem" />
+            </div>
+        </div>
     </section>
 
     <section class="body advantages">
+        <div class="header">
+            <h1 id="saber-mais">Por que a Nexus ?</h1>
+            <p>
+                A Nexus Company está há apenas 1 ano no mercado, porém já estamos todos pronto para atender você, veja abaixo motivos do por quê a Nexus é tão promissora:
+            </p>
+        </div>
         <div class="cards">
             <div class="feature">
                 <h1> Segurança</h1>
@@ -90,12 +113,12 @@
                 <p>É sério que você vai perder essas vantagens ?</p>
             </div>
             <div class="buttons">
-                <button type="button" 
+                <button type="button"
                         class="negative"
                         onclick="window.location.href='https://oauth.nexus-company.tech/Authentication'">
                     Login
                 </button>
-                <button type="button" 
+                <button type="button"
                         class="positive"
                         onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
                     Registre-se
@@ -121,7 +144,7 @@
                         <li>
                             <a href="#">FAQ's</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Support</a>
                         </li>
                         <li>
@@ -132,7 +155,7 @@
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
-                        <li >
+                        <li>
                             <a href="https://www.linkedin.com/company/nexuscompany">
                                 <span class="screen-reader-text">Linkedin</span>
                                 <i class="fa fa-lg fa-linkedin"> </i>
@@ -144,7 +167,7 @@
                                 <i class="fa fa-lg fa-instagram"></i>
                             </a>
                         </li>
-                        <li >
+                        <li>
                             <a href="https://wa.me/5561992503344?text=Hello,%20can%20you%20help%20me%20?!">
                                 <span class="screen-reader-text">Whatsapp</span>
                                 <i class="fa fa-lg fa-whatsapp"></i>
