--- a/Site/index.html
+++ b/Site/index.html
@@ -17,12 +17,12 @@
     <main>
         <section class="text">
             <h1>
-                Tá pronto para começar uma história ?!
+                Está pronto para começar ?!
             </h1>
 
             <div class="setence">
                 <div class="content">
-                    Hey, eae! Vai ficar só pensando em descer para olhar? Escorrega ai e veja por que a Nexus vai mudar a sua/nossa história.
+                    Escorrega ai e veja por que a Nexus vai mudar a sua/nossa história.
                 </div>
             </div>
         </section>
@@ -35,19 +35,23 @@
     <section class="body">
         <div class="content-divided">
             <div class="content left">
-                <h1>Valores e custos</h1>
-                <p>Nosso foco é sempre entregar o <span> melhor </span> resultado com o <span> menor </span> custo possível para todos os nossos parceiros.</p>
+                <h1>Nossos preços</h1>
+                <p>Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span> possível para todos os nossos parceiros.</p>
                 <button type="button" class="positive" onclick="window.location.href='https://wa.me/5561992503344'">
                     Saiba mais
                 </button>
             </div>
-            <div class="content right">
-                <img src="Resources\img\preco-baixo.png" width="120rem" />
+            <div class="content right background-gradient">
+                <div class="ocutor">
+                    <img src="Resources\img\preco-baixo.svg" width="125rem" />
+                </div>
             </div>
         </div>
         <div class="content-divided">
-            <div class="content left">
-                <img src="Resources\img\nexus_logo.png" width="250rem" />
+            <div class="content left background-gradient">
+                <div class="ocutor">
+                    <img src="Resources\img\experiencia.svg" width="125rem" />
+                </div>
             </div>
             <div class="content right">
                 <h1>Start up</h1>
@@ -57,25 +61,13 @@
                 </button>
             </div>
         </div>
-        <div class="content-divided">
-            <div class="content left">
-                <h1>Entrar em contato</h1>
-                <p>Precisa de ajuda para <span> elaborar </span> ou <span> construir </span> seu projeto de software ? Entre em contato conosco que iremos lhe ajudar durante todo o processo.</p>
-                <button type="button" class="positive" onclick="window.location.href='https://wa.me/5561992503344'">
-                    Saiba mais
-                </button>
-            </div>
-            <div class="content right">
-                <img src="Resources\img\whatsapp-business.svg" width="300rem" />
-            </div>
-        </div>
     </section>
 
     <section class="body advantages">
         <div class="header">
             <h1 id="saber-mais">Por que a Nexus ?</h1>
             <p>
-                A Nexus Company está há apenas 1 ano no mercado, porém já estamos todos pronto para atender você, veja abaixo motivos do por quê a Nexus é tão promissora:
+                A <b>Nexus</b> está pronta para <span>começar a crescer</span> junto com você, veja abaixo por que temos certeza disso:
             </p>
         </div>
         <div class="cards">
@@ -102,6 +94,22 @@
                 <p>
                     Seu feedback é muito importante para nós! Por isso estamos sempre prontos para lhe ajudar, além disso buscamos cada vez mais aperfeiçoar nossos canais de contato com os clientes.
                 </p>
+            </div>
+        </div>
+        <div class="contact">
+            <h1>Entrar em contato</h1>
+            <p>
+                Precisa de ajuda para <span> elaborar </span> ou <span> construir </span> seu projeto ? Entre em contato conosco que iremos tirar seu sonho do papel.
+            </p>
+            <div class="content-divided">
+                <div class="content left">
+                    <img src="Resources\img\whatsapp-business.svg" width="300rem" />
+                </div>
+                <div class="content right">
+                    <button type="button" class="positive" onclick="window.location.href='https://wa.me/5561992503344'">
+                        Conversar
+                    </button>
+                </div>
             </div>
         </div>
     </section>
