--- a/Site/index.html
+++ b/Site/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="content-divided">
             <div class="content left">
-                <img src="Resources\img\mobile-contact.gif" width="250rem" />
+                <img src="Resources\img\mobile-contact-mockup.gif" width="250rem" />
             </div>
             <div class="content right">
                 <h1>Ficou com dúvidas?</h1>
