--- a/Site/index.html
+++ b/Site/index.html
@@ -117,6 +117,23 @@
                 A <b>Nexus</b> é <span>fullstack</span> e utiliza tecnologias da <span>Microsoft</span>, trazendo a você <span>qualidade</span> em todas as fases do desenvolvimento.
             </p>
         </div>
+        <div class="carousel">
+            <div class="image">
+                <img src="Resources\img\brands\dotnet.svg" width="100rem" />
+            </div>
+            <div class="image">
+                <img src="Resources\img\brands\sql-server.svg" width="100rem" />
+            </div>
+            <div class="image">
+                <img src="Resources\img\brands\xamarin.svg" width="100rem" />
+            </div>
+            <div class="image">
+                <img src="Resources\img\brands\github.svg" width="100rem" />
+            </div>
+            <div class="image">
+
+            </div>
+        </div>
     </section>
 
     <section class="body contact" id="contact">
@@ -128,8 +145,9 @@
         </div>
         <div class="content-divided">
             <div class="content left">
-                <img src="Resources\img\mobile-contact-mockup.gif" width="250rem" />
+                <img src="Resources\img\mobile-contact-mockup.gif" alt="mobile contact mockup" width="345rem" />
             </div>
+            <div class="divider"></div>
             <div class="content right">
                 <h1>Ficou com dúvidas?</h1>
                 <p>
