--- a/Site/index.html
+++ b/Site/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="Resources\css\index.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="Resources/js/jquery.js"></script>
+    <script src="Resources/js/index.js"></script>
+    
 </head>
 <body>
     <nav>
@@ -145,7 +148,7 @@
         </div>
         <div class="content-divided">
             <div class="content left">
-                <img src="Resources\img\mobile-contact-mockup.gif" alt="mobile contact mockup" width="345rem" />
+                <img src="Resources\img\mobile-contact-mockup.gif" alt="mobile contact mockup" width="300rem" />
             </div>
             <div class="divider"></div>
             <div class="content right">
