--- a/Site/index.html
+++ b/Site/index.html
@@ -40,7 +40,7 @@
                     <img src="Resources\img\responsive-design.svg" width="125rem" />
                 </div>
             </div>
-            <div class="content right">
+            <div class="content right slide">
                 <h1>Fullstack</h1>
                 <p>Desenvolvemos para <span>todas</span> as plataformas, dessa forma seu <b>app</b> será acessado em <span>todos</span> dispositivos.</p>
                 <button type="button" class="negative" onclick="more()">
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="content-divided">
-            <div class="content left">
+            <div class="content left slide">
                 <h1>Nossos preços</h1>
                 <p>Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span> possível para todos os nossos parceiros.</p>
                 <button type="button" class="positive" onclick="more()">
@@ -68,7 +68,7 @@
                     <img src="Resources\img\experiencia.svg" width="125rem" />
                 </div>
             </div>
-            <div class="content right">
+            <div class="content right slide">
                 <h1>Start up</h1>
                 <p>Somos novos na área empresarial, porém temos total <span>experiência</span> e conhecimento na área de desenvolvimento.</p>
                 <button type="button" class="negative" onclick="more()">
@@ -151,7 +151,7 @@
                 <img src="Resources\img\mobile-contact-mockup.gif" alt="mobile contact mockup" width="300rem" />
             </div>
             <div class="divider"></div>
-            <div class="content right">
+            <div class="content right slide">
                 <h1>Ficou com dúvidas?</h1>
                 <p>
                     Entre em contato conosco pelo <b>Whatsapp</b> para tirarmos todas as suas dúvidas.
