--- a/Site/index.html
+++ b/Site/index.html
@@ -29,11 +29,11 @@
         </section>
         <section class="read-more">
             <p>Veja mais</p>
-            <img class="arrow" src="Resources\img\arrow_down.svg" onclick="more()" />
+            <img class="arrow" src="Resources\img\arrow_down.svg" onclick="seen()" />
         </section>
     </main>
 
-    <section class="body">
+    <section class="body" id="content">
         <div class="content-divided">
             <div class="content left background-gradient">
                 <div class="ocutor extreme">
@@ -78,7 +78,7 @@
         </div>
     </section>
 
-    <section class="body advantages">
+    <section class="body advantages" id="advantages">
         <div class="header">
             <h1 id="saber-mais">Por que a Nexus ?</h1>
             <p>
@@ -139,14 +139,14 @@
         </div>
     </section>
 
-    <section class="body contact" id="contact">
+    <section class="body contact">
         <div class="header">
             <h1>Entrar em contato</h1>
             <p>
                 Precisa de ajuda para <span> elaborar </span> ou <span> construir </span> seu projeto ? Entre em contato conosco que iremos tirar seu sonho do papel.
             </p>
         </div>
-        <div class="content-divided">
+        <div class="content-divided" id="contact">
             <div class="content left">
                 <img src="Resources\img\mobile-contact-mockup.gif" alt="mobile contact mockup" width="300rem" />
             </div>
